--- a/06 practice/01/style.css
+++ b/06 practice/01/style.css
@@ -13,11 +13,11 @@ body{
 
 .container{
   background-color: white;
-  width: 400px;
+  width: 25rem;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 50px 20px;
+  padding: 3.125rem 1.25rem;
   box-shadow: 0 1px 1px rgba(0,0,0,0.12), 
             0 2px 2px rgba(0,0,0,0.12), 
             0 4px 4px rgba(0,0,0,0.12), 
@@ -26,8 +26,8 @@ body{
 }
 
 h1{
-  margin-bottom: 3px;
-  margin-top: 15px;
+  margin-bottom: 0.1875rem;
+  margin-top: 1rem;
 }
 
 p{
@@ -39,8 +39,8 @@ button{
   background-color: rgb(91, 91, 230);
   color: white;
   border: none;
-  padding: 10px 20px;
-  border-radius: 5px;
+  padding: 0.625rem 1.25rem;
+  border-radius: 0.3125rem;
 }
 
 button:hover{
