--- a/06 practice/02/style.css
+++ b/06 practice/02/style.css
@@ -13,9 +13,9 @@ body{
 
 .container{
   background-color: white;
-  padding: 50px 20px;
+  padding: 3.125rem 1.25rem;
   box-sizing: border-box;
-  width: 475px;
+  width: 30rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -30,7 +30,7 @@ body{
 .msg,
 form{
   margin-top: 0px;
-  margin-bottom: 20px;
+  margin-bottom: 1.25rem;
 }
 
 .msg{
@@ -38,7 +38,7 @@ form{
 }
 
 input{
-  padding: 5px 10px;
+  padding: 0.3125rem 0.625rem;
   outline: none;
   font-family: inherit;
 }
